# embedded

./: .gitignore  .gitmodules  Doxyfile  README.md
.github/workflows/: esp_builds.yml
ESP_HAL/inc/: AUTOMOTE_LTR_303.hpp  Adafruit_Sensor.h  CDFER_LTR303.hpp  ESPHAL_ADC.hpp  ESPHAL_GPIO.hpp  ESPHAL_I2C.hpp  ESPHAL_MessageQueue.hpp  ESPHAL_PWM.hpp  ESPHAL_SHT40.hpp  ESPHAL_TCA9545A.hpp  ESPHAL_Time.hpp  ESPHAL_VEML_7700.hpp  ESPHAL_Websocket.hpp  ESPHAL_Wifi.hpp  POLOLU_VL53L0X.hpp  esp_veml_7700.h
ESP_HAL/src/: AUTOMOTE_LTR303.cpp  CDFER_LTR303.cpp  ESPHAL_ADC.cpp  ESPHAL_GPIO.cpp  ESPHAL_I2C.cpp  ESPHAL_PWM.cpp  ESPHAL_SHT40.cpp  ESPHAL_TCA9545A.cpp  ESPHAL_Time.cpp  ESPHAL_VEML_7700.cpp  ESPHAL_Websocket.cpp  ESPHAL_Wifi.cpp  POLOLU_VL53L0X.cpp  esp_veml_7700.c
analysis/: dli_controller.py  mixing_controller.py
c_source/HAL/: ADC.hpp  HAL_ADC.hpp  HAL_GPIO.hpp  HAL_I2C.hpp  HAL_PWMChannel.hpp  HAL_PWMTimer.hpp  MessageQueue.hpp  time.hpp
c_source/inc/app/: CommManager.hpp  CommManagerTypes.hpp  GrowLightController.hpp  MixingManager.hpp  PumpManager.hpp  StatusLightingManager.hpp  WaterLevelController.hpp
c_source/inc/device/: GrowLightSection.hpp  MixingDevice.hpp  PumpDevice.hpp  StatusLED.hpp  WaterFlowSensor.hpp
c_source/inc/driver/: BinaryLoad.hpp  GrowLight.hpp  HallTach.hpp  LightSensor.hpp  LoadCell.hpp  TDSSense.hpp  TOF.hpp  TempHumiditySense.hpp  VL53L0X.hpp  WaterLevelSense.hpp  pHSense.hpp
c_source/src/app/: CommManager.cpp  GrowLightController.cpp  MixingManager.cpp  PumpManager.cpp  StatusLightingManager.cpp  WaterLevelController.cpp
c_source/src/device/: GrowLightSection.cpp  MixingDevice.cpp  PumpDevice.cpp  StatusLED.cpp  WaterFlowSensor.cpp
c_source/src/driver/: BinaryLoad.cpp  GrowLight.cpp  HallTach.cpp  LoadCell.cpp  TDSSense.cpp  WaterLevelSense.cpp  pHSense.cpp
c_source/test/: CMakeLists.txt  test_binary_load.cpp  test_comm_manager.cpp  test_grow_light.cpp  test_growlightsection.cpp  test_hall_tach.cpp  test_hx711.cpp  test_mixing_device.cpp  test_mixing_manager.cpp  test_ph_sense.cpp  test_pump_device.cpp  test_pump_manager.cpp  test_rgb_led.cpp  test_status_led.cpp  test_tds_sense.cpp  test_vl53l0x.cpp  test_water_level.cpp  test_water_level_controller.cpp
c_source/test/mocks/: MockADC.hpp  MockBinaryLoad.hpp  MockGPIO.hpp  MockGrowLight.hpp  MockLightSensor.hpp  MockMessageQueue.hpp  MockMixingDevice.hpp  MockPumpDevice.hpp  MockTDS.hpp  MockTOF.hpp  MockTime.hpp  MockTransportLayer.hpp  MockWaterLevelSense.hpp  Mock_PWMChannel.hpp  Mock_PWMTimer.hpp  Mock_StatusLED.hpp  MockpH.hpp
controllers/node-controller/: CMakeLists.txt  sdkconfig
controllers/node-controller/main/: CMakeLists.txt  app_node.cpp  board_config.hpp  node-controller.c
controllers/pump-controller/: CMakeLists.txt
controllers/pump-controller/main/: CMakeLists.txt  app.cpp  app_pump.cpp  board_config.hpp  pump-controller.c
private/: .gitignore  config_default.h
scripts/: build_esp.py  build_protobuf.py  build_requirements.json  demeter_build_script.py  format.py  install_esp_idf.py  lint.py  python_requirements.txt  setup.py  test_c_source.py
web-scripts/: websocket_client.py  websocket_server_test.py
